--- a/page2.html
+++ b/page2.html
@@ -11,7 +11,7 @@
     <hr />
     <nav>
       &nbsp; <a href="picturstory.html">&lt;&nbsp;Back</a>&nbsp;&nbsp;
-      <a href="picturstory.html">Home</a>&nbsp;&nbsp;
+      <a href="index.html">Home</a>&nbsp;&nbsp;
       <a href="page3.html">Next&nbsp;&gt;</a>
     </nav>
     <hr />
