--- a/page2.html
+++ b/page2.html
@@ -10,8 +10,8 @@
     <h3 style="text-align: center"><em>Page 2</em></h3>
     <hr />
     <nav>
-      &nbsp; <a href="picturstory.html">&lt;&nbsp;Back</a>&nbsp;&nbsp;
-      <a href="index.html">Home</a>&nbsp;&nbsp;
+      &nbsp; <a href="index.html">&lt;&nbsp;Back</a>&nbsp;&nbsp;
+      <a href="page2.html">Home</a>&nbsp;&nbsp;
       <a href="page3.html">Next&nbsp;&gt;</a>
     </nav>
     <hr />
