--- a/page4.html
+++ b/page4.html
@@ -11,7 +11,7 @@
     <hr />
     <nav>
       &nbsp; <a href="page3.html">&lt;&nbsp;Back</a>&nbsp;&nbsp;
-      <a href="picturstory.html">Home</a>&nbsp;&nbsp;
+      <a href="index.html">Home</a>&nbsp;&nbsp;
       <a href="page5.html">Next&nbsp;&gt;</a>
     </nav>
     <hr />
