--- a/page6.html
+++ b/page6.html
@@ -11,7 +11,7 @@
     <hr />
     <nav>
       &nbsp; <a href="page5.html">&lt;&nbsp;Back</a>&nbsp;&nbsp;
-      <a href="picturstory.html">Home</a>
+      <a href="index.html">Home</a>
     </nav>
     <hr />
     <h2 style="text-align: center">About Author</h2>
