--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <a href="page2.html">Next&nbsp;&gt;</a>
     </nav>
     <hr />
-    <p>
+    <p style="font-size: 30px" >
       In a colorful meadow, there lived a curious caterpillar named Cody. Cody
       spent his days munching on juicy leaves, but he dreamt of something more.
     </p>
