--- a/page2.html
+++ b/page2.html
@@ -15,7 +15,7 @@
       <a href="page3.html">Next&nbsp;&gt;</a>
     </nav>
     <hr />
-    <p>
+    <p style="font-size: 25px" >
       One day, he met a wise old butterfly who told him,
       <em> "To fly, you must first believe."</em>
     </p>
