--- a/page3.html
+++ b/page3.html
@@ -15,7 +15,7 @@
       <a href="page4.html">Next&nbsp;&gt;</a>
     </nav>
     <hr />
-    <p>
+    <p style="font-size: 25px" >
       With newfound confidence, Cody spun a cocoon, and soon, he emerged as a
       beautiful butterfly, soaring high in the sky, living his dream.
     </p>
