--- a/page4.html
+++ b/page4.html
@@ -15,7 +15,7 @@
       <a href="page5.html">Next&nbsp;&gt;</a>
     </nav>
     <hr />
-    <p>
+    <p style="font-size: 25px" >
       And so, Cody learned that with belief, even the smallest caterpillar can
       achieve greatness.
     </p>
