--- a/page5.html
+++ b/page5.html
@@ -15,7 +15,7 @@
       <a href="page6.html">Next&nbsp;&gt;</a>
     </nav>
     <hr />
-    <p>
+    <p style="font-size: 25px" >
       Cody also started inspiring others in the meadow to reach for the skies
       and follow their dreams.
     </p>
