--- a/page6.html
+++ b/page6.html
@@ -15,7 +15,7 @@
     </nav>
     <hr />
     <h2 style="text-align: center">About Author</h2>
-    <p>
+    <p style="font-size: 25px" >
       <strong> "The Curious Caterpillar"</strong> was a short story written by
       <strong> Octavia E. Butler</strong>. She was a groundbreaking African
       American science fiction writer known for her thought-provoking and
