--- a/page6.html
+++ b/page6.html
@@ -17,9 +17,9 @@
     <h2 style="text-align: center">About Author</h2>
     <p style="font-size: 25px" >
       <strong> "The Curious Caterpillar"</strong> was a short story written by
-      <strong> Octavia E. Butler</strong>. She was a groundbreaking African
+      <strong> Octavia E. Butler</strong>. She was a ground-breaking African
       American science fiction writer known for her thought-provoking and
-      socially relevant works.Her work also includes imaginative and whimsical
+      socially relevant works. Her work also includes imaginative and whimsical
       tales that have captured the hearts of young readers for generations.
     </p>
   </body>
