--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     </nav>
     <hr />
     <p style="font-size: 25px" >
-      In a colorful meadow, there lived a curious caterpillar named Cody. Cody
+      In a colorful meadow, there lived a curious caterpillar named "Cody". Cody
       spent his days munching on juicy leaves, but he dreamt of something more.
     </p>
     <img
